spawn sushi and blue pumpkin

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<div id='background'>
 		<div id="maze" class="shadow"></div>
 		<div id='character'></div>
-		<img class="sushi hide" src="./img/onigiri.png">
-		<img class="pumpkin" src="./img/scaredy.png">
+		<!-- <img class="sushi" src="./img/onigiri.png"> -->
+		<!-- <img class="pumpkin" src="./img/scaredy.png"> -->
 	</div>
 
 
