--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
 		<div class="scoreboard">
 			<div class="score">
 				<h1>Score: </h1>
-				<div class="number"></div>
+				<div class="number">0</div>
 			</div>
 			<div class="lives">
 				<h1>Lives: </h1>
-				<div class="icons"></div>
+				<div class="icons">
+					<img class="life" src="./img/sushi.png">
+					<img class="life" src="./img/sushi.png">
+					<img class="life" src="./img/sushi.png">
+					<img class="life" src="./img/sushi.png">
+					<img class="life" src="./img/sushi.png">
+				</div>
 			</div>
 		</div>
 
