--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js"
 		integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-	<script src="ninja.js"></script>
+	<script src="public/js/ninja.js"></script>
 
 </body>
 
