add game over screen

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <body>
 	<section class="game">
+		<div class="game_over hide">
+			<h1>GAME OVER</h1>
+		</div>
 		<div id='background'>
 			<div id="maze" class="shadow"></div>
 			<div id='character'></div>
@@ -22,13 +25,7 @@
 			</div>
 			<div class="lives">
 				<h1>Lives: </h1>
-				<div class="icons">
-					<img class="life" src="./img/sushi.png">
-					<img class="life" src="./img/sushi.png">
-					<img class="life" src="./img/sushi.png">
-					<img class="life" src="./img/sushi.png">
-					<img class="life" src="./img/sushi.png">
-				</div>
+				<div class="life">5</div>
 			</div>
 		</div>
 
